--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "parcel index.html",
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Webutvikling-og-API-design-PG6301/lab_2-v1.1-testing-with-jest.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,5 +27,10 @@
     "parcel": "^2.2.1",
     "parcel-bundler": "^1.12.5"
   },
-  "jest": { "testEnvironment": "jsdom" }
+  "jest": {
+    "testEnvironment": "jsdom",
+    "collectCoverageFrom": [
+      "*.jsx"
+    ]
+  }
 }
