--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
-name: Run test
+name: Run tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -11,7 +14,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          cache: "npm"
       - run: npm ci
       - run: npm run verify
       - name: Coveralls
