--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "parcel index.html",
     "test": "jest",
-    "verify": "jest --collectCoverage"
+    "verify": "jest --collectCoverage &&  npm run test:coverage",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
